# RUC

./: README.md  canvas.go  client.go  go.mod  go.sum  messages.go
cmd/rucli/: .gitignore  rucli.go
docs/: protocol.md
emulator/: client.go  display.go  emulator.go  go.mod  go.sum
examples/bounce/: bounce.go
examples/pixels/: pixels.go
firmware/: CMakeLists.txt  main.cpp  sdksetup.cmake
unicorn/: .gitignore  client.py  config.py.example  main.py  messages.py  server.py
unicorn/rulib/: __init__.py  client.py  config.py  display.py  messages.py  server.py  wifi.py
